--- a/messages/ark/ark._desktop_.po
+++ b/messages/ark/ark._desktop_.po
@@ -1,46 +1,48 @@
 # translation of desktop_kdeutils.po to Thai
 # Thanomsub Noppaburana <donga_n@yahoo.com>, 2003.
 # Thanomsub Noppaburana <donga.nb@gmail.com>, 2008, 2010.
+# SPDX-FileCopyrightText: 2025 Satakun Utama <linesofcodes@dailitation.xyz>
 msgid ""
 msgstr ""
 "Project-Id-Version: desktop_kdeutils\n"
 "Report-Msgid-Bugs-To: https://bugs.kde.org\n"
 "POT-Creation-Date: 2024-12-15 13:18+0100\n"
-"PO-Revision-Date: 2010-12-18 15:49+0700\n"
-"Last-Translator: Thanomsub Noppaburana <donga.nb@gmail.com>\n"
-"Language-Team: Thai <thai-l10n@googlegroups.com>\n"
+"PO-Revision-Date: 2025-03-24 18:10+0700\n"
+"Last-Translator: Satakun Utama <linesofcodes@dailitation.xyz>\n"
+"Language-Team: Thai <kde-i18n-doc@kde.org>\n"
 "Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 24.12.3\n"
 
 #. +> trunk6 stable6
 #: app/org.kde.ark.desktop.cmake:3
 msgctxt "GenericName"
 msgid "Archiving Tool"
-msgstr "เครื่องมือจัดการแฟ้มจัดเก็บ"
+msgstr "เครื่องมือการจัดเก็บไฟล์อาร์ไคฟ์"
 
 #. +> trunk6 stable6
 #: app/org.kde.ark.desktop.cmake:82
 msgctxt "Name"
 msgid "Ark"
-msgstr "อาร์ก"
+msgstr "Ark"
 
 #. +> trunk6 stable6
 #: app/org.kde.ark.desktop.cmake:167
 msgctxt "Comment"
 msgid "Work with file archives"
-msgstr ""
+msgstr "ทำงานกับไฟล์อาร์ไคฟ์"
 
 #. +> trunk6 stable6
 #: part/ark_part.desktop.cmake:3
 msgctxt "Name"
 msgid "Archiver"
-msgstr "ตัวสร้างแฟ้มจัดเก็บ"
+msgstr "ตัวสร้างไฟล์อาร์ไคฟ์"
 
 #. +> trunk6 stable6
 #: part/ark_part.desktop.cmake:81
 msgctxt "Comment"
 msgid "Archive Handling Tool"
-msgstr "เครื่องมือจัดการแฟ้มจัดเก็บ"
+msgstr "เครื่องมือการจัดการไฟล์อาร์ไคฟ์"
