--- a/messages/ark/ark._json_.po
+++ b/messages/ark/ark._json_.po
@@ -1,127 +1,129 @@
+# SPDX-FileCopyrightText: 2025 Satakun Utama <linesofcodes@dailitation.xyz>
 msgid ""
 msgstr ""
 "Project-Id-Version: json files\n"
 "Report-Msgid-Bugs-To: https://bugs.kde.org\n"
 "POT-Creation-Date: 2024-04-22 09:33+0200\n"
-"PO-Revision-Date: 2025-03-17 14:51+0700\n"
-"Last-Translator: Thai Translator <none>\n"
-"Language-Team: Thai <kde-i18n-docs@kde.org>\n"
+"PO-Revision-Date: 2025-03-24 18:17+0700\n"
+"Last-Translator: Satakun Utama <linesofcodes@dailitation.xyz>\n"
+"Language-Team: Thai <kde-i18n-doc@kde.org>\n"
 "Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 24.12.3\n"
 
 #. +> trunk6 stable6
 #: app/ark_dndextract.json.cmake
 msgctxt "Name"
 msgid "Ark Extract Here"
-msgstr ""
+msgstr "Ark แตกไฟล์ตรงนี้"
 
 #. +> trunk6 stable6
 #: app/compressfileitemaction.json
 msgctxt "Name"
 msgid "'Compress' service menu"
-msgstr ""
+msgstr "เมนูบริการ 'บีบอัด'"
 
 #. +> trunk6 stable6
 #: app/extractfileitemaction.json
 msgctxt "Name"
 msgid "'Extract' service menu"
-msgstr ""
+msgstr "เมนูบริการ 'แตกไฟล์'"
 
 #. +> trunk6 stable6
 #: part/ark_part.json.cmake
 msgctxt "Name"
 msgid "Archiver"
-msgstr ""
+msgstr "ตัวสร้างไฟล์อาร์ไคฟ์"
 
 #. +> trunk6 stable6
 #: part/ark_part.json.cmake
 msgctxt "Description"
 msgid "Archive Handling Tool"
-msgstr ""
+msgstr "เครื่องมือการจัดการไฟล์อาร์ไคฟ์"
 
 #. +> trunk6 stable6
 #: plugins/cli7zplugin/kerfuffle_cli7z.json.cmake
 msgctxt "Name"
 msgid "7z plugin"
-msgstr ""
+msgstr "ปลั๊กอิน 7z"
 
 #. +> trunk6 stable6
 #: plugins/cli7zplugin/kerfuffle_cli7z.json.cmake
 msgctxt "Description"
 msgid "Full support for the zip and 7z archive formats"
-msgstr ""
+msgstr "การสนับสนุนเต็มรูปแบบของไฟล์อาร์ไคฟ์ฟอร์แมท zip และ 7z"
 
 #. +> trunk6 stable6
 #: plugins/cliarjplugin/kerfuffle_cliarj.json.cmake
 msgctxt "Name"
 msgid "ARJ plugin"
-msgstr ""
+msgstr "ปลั๊กอิน ARJ"
 
 #. +> trunk6 stable6
 #: plugins/cliarjplugin/kerfuffle_cliarj.json.cmake
 msgctxt "Description"
 msgid "Full support for the ARJ archive formats"
-msgstr ""
+msgstr "การสนับสนุนเต็มรูปแบบของไฟล์อาร์ไคฟ์ฟอร์แมท ARJ"
 
 #. +> trunk6 stable6
 #: plugins/clirarplugin/kerfuffle_clirar.json.cmake
 msgctxt "Name"
 msgid "RAR plugin"
-msgstr ""
+msgstr "ปลั๊กอิน RAR"
 
 #. +> trunk6 stable6
 #: plugins/clirarplugin/kerfuffle_clirar.json.cmake
 msgctxt "Description"
 msgid "Full support for the RAR archive format"
-msgstr ""
+msgstr "การสนับสนุนเต็มรูปแบบของไฟล์อาร์ไคฟ์ฟอร์แมท RAR"
 
 #. +> trunk6 stable6
 #: plugins/cliunarchiverplugin/kerfuffle_cliunarchiver.json.cmake
 msgctxt "Name"
 msgid "The Unarchiver plugin"
-msgstr ""
+msgstr "ปลั๊กอิน Unarchiver"
 
 #. +> trunk6 stable6
 #: plugins/cliunarchiverplugin/kerfuffle_cliunarchiver.json.cmake
 msgctxt "Description"
 msgid "Open and extract RAR and LHA archives"
-msgstr ""
+msgstr "เปิดและแตกไฟล์อาร์ไคฟ์ RAR และ LHA"
 
 #. +> trunk6 stable6
 #: plugins/clizipplugin/kerfuffle_clizip.json.cmake
 msgctxt "Name"
 msgid "Info-zip plugin"
-msgstr ""
+msgstr "ปลั๊กอิน Info-zip"
 
 #. +> trunk6 stable6
 #: plugins/clizipplugin/kerfuffle_clizip.json.cmake
 msgctxt "Description"
 msgid "Legacy support for the zip archive format"
-msgstr ""
+msgstr "การรับรองไฟล์อาร์ไคฟ์ฟอร์แมท zip แบบดั้งเดิม"
 
 #. +> trunk6 stable6
 #: plugins/libarchive/kerfuffle_libarchive.json.cmake
 msgctxt "Name"
 msgid "Libarchive plugin"
-msgstr ""
+msgstr "ปลั๊กอิน Libarchive"
 
 #. +> trunk6 stable6
 #: plugins/libarchive/kerfuffle_libarchive.json.cmake
 msgctxt "Description"
 msgid "Full support for compressed TAR archives"
-msgstr ""
+msgstr "การสนับสนุนเต็มรูปแบบของไฟล์อาร์ไคฟ์ TAR ที่บีบอัด"
 
 #. +> trunk6 stable6
 #: plugins/libarchive/kerfuffle_libarchive_readonly.json.cmake
 msgctxt "Name"
 msgid "Libarchive plugin (read-only formats)"
-msgstr ""
+msgstr "ปลั๊กอิน Libarchive (ฟอร์แมทแบบอ่านเท่านั้น)"
 
 #. +> trunk6 stable6
 #: plugins/libarchive/kerfuffle_libarchive_readonly.json.cmake
 msgctxt "Description"
 msgid "Open and extract DEB, RPM, ISO, AppImage, XAR, CAB, and EXE files"
-msgstr ""
+msgstr "เปิดและแตกไฟล์ DEB RPM ISO AppImage XAR CAB และ EXE"
