--- a/messages/ark/org.kde.ark.appdata.po
+++ b/messages/ark/org.kde.ark.appdata.po
@@ -1,54 +1,62 @@
+# SPDX-FileCopyrightText: 2025 Satakun Utama <linesofcodes@dailitation.xyz>
 msgid ""
 msgstr ""
 "Project-Id-Version: org.kde.ark.appdata\n"
 "POT-Creation-Date: 2024-11-04 13:07+0100\n"
-"PO-Revision-Date: 2025-03-17 14:51+0700\n"
-"Last-Translator: Thai Translator <none>\n"
-"Language-Team: Thai <kde-i18n-docs@kde.org>\n"
+"PO-Revision-Date: 2025-03-24 18:09+0700\n"
+"Last-Translator: Satakun Utama <linesofcodes@dailitation.xyz>\n"
+"Language-Team: Thai <kde-i18n-doc@kde.org>\n"
 "Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 24.12.3\n"
 
 #. (itstool) path: component/name
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:11
 msgid "Ark"
-msgstr ""
+msgstr "Ark"
 
 #. (itstool) path: component/summary
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:12
 msgid "Archiving Tool"
-msgstr ""
+msgstr "เครื่องมือการจัดเก็บไฟล์อาร์ไคฟ์"
 
 #. (itstool) path: description/p
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:14
-msgid "Ark is a graphical file compression/decompression utility with support for multiple formats, including tar, gzip, bzip2, rar and zip, as well as CD-ROM images. Ark can be used to browse, extract, create, and modify archives."
+msgid ""
+"Ark is a graphical file compression/decompression utility with support for mul"
+"tiple formats, including tar, gzip, bzip2, rar and zip, as well as CD-ROM imag"
+"es. Ark can be used to browse, extract, create, and modify archives."
 msgstr ""
+"Ark เป็นเครื่องมือบีบอัด/แตกไฟล์ที่รองรับหลายฟอร์แมท ได้แก่ tar gzip bzip2 rar"
+" และ zip และรวมถึงอิมเมจ CD-ROM Ark สามารถใช้เพื่อเรียกดู แตกไฟล์ สร้าง และแก้"
+"ไขไฟล์บีบอัดได้"
 
 #. (itstool) path: description/p
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:19
 msgid "Features:"
-msgstr ""
+msgstr "ฟีเจอร์:"
 
 #. (itstool) path: ul/li
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:21
 msgid "Several formats supported: gzip, bzip2, zip, rar, 7z and more"
-msgstr ""
+msgstr "รองรับหลายฟอร์แมท: gzip bzip2 zip rar 7z และอีกมากมาย"
 
 #. (itstool) path: ul/li
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:22
 msgid "Preview file contents without extracting files"
-msgstr ""
+msgstr "พรีวิวเนื้อหาไฟล์โดยไม่ต้องแตกไฟล์"
 
 #. (itstool) path: screenshot/caption
 #. +> trunk6 stable6
 #: org.kde.ark.appdata.xml:27
 msgid "Managing archives with Ark"
-msgstr ""
+msgstr "การจัดการไฟล์อาร์ไคฟ์ด้วย Ark"
